# FWI-CUDA

./: README.md
CUDA_fwi/: CMakeLists.txt  fwi_main.cu  fwi_propagator.cu  fwi_propagator.cuh
SetupParams/: fwi_frequencies.txt  fwi_params.txt  fwi_schedule.txt
common/: fwi_common.cu  fwi_common.cuh  fwi_constants.cu  fwi_constants.cuh  fwi_generatemodel.c  fwi_kernel.cu  fwi_kernel.cuh  fwi_sched.cu  fwi_sched.cuh  fwi_schedule.cu
utils/: CMakeLists.txt
